<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".Loginfragment">

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:text="@string/loginTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailTxt">

        </EditText>

        <EditText
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:id="@+id/passEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passTxt">
        </EditText>

        <TextView
            android:textColor="@color/Red"
            android:id="@+id/errorTxt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </TextView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonTxt"
                android:text="@string/loginTxt"
                android:layout_gravity="center"
                android:backgroundTint="@color/Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/donthaveText"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dontaccount"
                />
        </LinearLayout>




    </LinearLayout>
</LinearLayout>